// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FindPassword Presentational 테스트 비밀번호 입력단계 1`] = `
<div>
  <main
    class="mainBlock changePassword"
  >
    <div
      class="subBlock"
    >
      <h1
        class="title"
      >
        비밀번호 찾기
      </h1>
      <div
        class="contentBlock"
      >
        <div
          class="subTitle"
        >
          비밀번호
        </div>
        <input
          class="input"
          data-testid="newPassword"
          placeholder="새 비밀번호를 입력하세요"
          type="password"
        />
      </div>
      <div
        class="contentBlock"
      >
        <div
          class="subTitle"
        >
          비밀번호 확인
        </div>
        <input
          class="input"
          data-testid="newPasswordCheck"
          placeholder="새 비밀번호를 한번더 입력하세요"
          type="password"
        />
        <div
          class="submitButtonBlock"
        >
          <button
            class="submitButton"
            data-testid="changePassword"
          >
            비밀번호 변경
          </button>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`FindPassword Presentational 테스트 이메일 입력단계 1`] = `
<div>
  <main
    class="mainBlock nomal"
  >
    <div
      class="subBlock"
    >
      <h1
        class="title"
      >
        비밀번호 찾기
      </h1>
      <div
        class="contentBlock"
      >
        <div
          class="subTitle"
        >
          이메일
        </div>
        <input
          class="input"
          data-testid="email"
          placeholder="이메일을 입력하세요"
        />
        <div
          class="submitButtonBlock"
        >
          <button
            class="submitButton"
            data-testid="sendMail"
          >
            메일 전송
          </button>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`FindPassword Presentational 테스트 인증번호 입력단계 1`] = `
<div>
  <main
    class="mainBlock nomal"
  >
    <div
      class="subBlock"
    >
      <h1
        class="title"
      >
        비밀번호 찾기
      </h1>
      <div
        class="contentBlock"
      >
        <div
          class="subTitle"
        >
          인증번호
        </div>
        <input
          class="input"
          data-testid="randomNumber"
          placeholder="인증번호를 입력하세요"
        />
      </div>
      <div
        class="submitButtonBlock"
      >
        <button
          class="submitButton"
          data-testid="checkAuthNum"
        >
          인증번호 확인
        </button>
      </div>
    </div>
  </main>
</div>
`;
